--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "^8.10.0",
+    "@types/react-select": "^5.0.1",
+    "chart.js": "^4.4.0",
+    "firebase": "^10.5.0",
+    "random-words": "^2.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-auth-hooks": "^1.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-google-button": "^0.7.2",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
